--- a/sass/main.css
+++ b/sass/main.css
@@ -22,19 +22,78 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-family: "DM Sans", sans-serif;
+  background-color: #f8e9dd;
 }
 
-body {
-  height: 100vh;
+.container {
+  width: 90%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-family: "DM Sans", sans-serif;
+}
+
+.container__header {
+  width: 100%;
+  background-color: #ec775f;
+  padding: 2rem;
+  border-radius: 1rem;
+  color: #fffaf5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container__header__balance {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 0.5rem;
+}
+
+.container__header__balance-text {
+  font-size: 1.3rem;
+  font-weight: 300;
+}
+
+.container__header__balance-sum {
+  font-size: 2.2rem;
+  font-weight: bold;
+}
+
+.container__header-circles {
+  width: 4rem;
+  height: 4rem;
+  background-color: #382314;
+  border-radius: 50%;
+  position: relative;
+}
+
+.container__header-circles::before {
+  content: "";
+  position: absolute;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  background: none;
+  border: 2px solid #fffaf5;
+  left: -50%;
 }
 /*# sourceMappingURL=main.css.map */
