--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,4 +7,58 @@ body {
   justify-content: center;
   align-items: center;
   font-family: "DM Sans", sans-serif;
+  background-color: $Cream;
+}
+
+.container {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__header {
+    width: 100%;
+    background-color: $Soft-red;
+    padding: 2rem;
+    border-radius: 1rem;
+    color: $Very-pale-orange;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    &__balance {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+
+      &-text {
+        font-size: 1.3rem;
+        font-weight: 300;
+      }
+
+      &-sum {
+        font-size: 2.2rem;
+        font-weight: bold;
+      }
+    }
+
+    &-circles {
+      width: 4rem;
+      height: 4rem;
+      background-color: $Dark-brown;
+      border-radius: 50%;
+      position: relative;
+
+      &::before {
+        content: "";
+        position: absolute;
+        width: 4rem;
+        height: 4rem;
+        border-radius: 50%;
+        background: none;
+        border: 2px solid $Very-pale-orange;
+        left: -50%;
+      }
+    }
+  }
 }
