--- a/sass/main.scss
+++ b/sass/main.scss
@@ -62,3 +62,31 @@ body {
     }
   }
 }
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 40%;
+
+    &__header {
+      &__balance {
+        gap: 0.7rem;
+
+        &-text {
+          font-size: 1.7rem;
+          font-weight: 300;
+        }
+
+        &-sum {
+          font-size: 2.8rem;
+          font-weight: bold;
+        }
+      }
+    }
+  }
+}
