--- a/sass/main.css
+++ b/sass/main.css
@@ -99,13 +99,19 @@ body {
 
 @media screen and (min-width: 768px) {
   .container {
-    width: 50%;
+    width: 70%;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .container {
+    width: 60%;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .container {
-    width: 40%;
+    width: 60%;
   }
   .container__header__balance {
     gap: 0.7rem;
@@ -117,6 +123,12 @@ body {
   .container__header__balance-sum {
     font-size: 2.8rem;
     font-weight: bold;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    width: 45%;
   }
 }
 /*# sourceMappingURL=main.css.map */
